main.html --> index.html

--- a/cute.html
+++ b/cute.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <h1 style="display: flex; text-align: center">내가 포착한 귀여움</h1>
-    <img src="./cute/IMG_2666.JPG" />
+    <img src="./cute/aaatitle.JPG" />
     <div class="work-stage">
       <div class="work-stage__box">
         <img src="./cute/IMG_0117.HEIC" />
