--- a/cute.html
+++ b/cute.html
@@ -28,14 +28,13 @@
     </style>
   </head>
   <body>
+    <img src="./cute/IMG_2666.JPG" style="width: 100%; height: " />
     <h1 style="display: flex; text-align: center">내가 포착한 귀여움</h1>
-    <img src="./cute/IMG_2666.JPG" />
+
     <div class="work-stage">
-      <div class="work-stage__box">
-        <img src="./cute/IMG_0117.HEIC" />
-        <img src="./cute/IMG_0272.HEIC" />
-        <img src="./cute/IMG_0348.HEIC" />
-      </div>
+      <img src="./cute/IMG_0117.HEIC" />
+      <img src="./cute/IMG_0272.HEIC" />
+      <img src="./cute/IMG_0348.HEIC" />
     </div>
   </body>
 </html>
