--- a/projectList.html
+++ b/projectList.html
@@ -14,7 +14,6 @@
       .portfolio {
         grid-column: 1/2;
         width: 100%;
-        border: thin solid rgb(2, 2, 2);
       }
     </style>
   </head>
@@ -24,7 +23,7 @@
       <a href="./index.html">home</a>
     </div>
     <div class="container">
-      <div class="Portfolio" style="border: thin solid rgb(2, 2, 2)">
+      <div class="Portfolio">
         <p style="text-align: center">Portfolio</p>
         <a href="https://github.com/gyeong-k/Portfolio"
           ><img src="./img/portfolio_img.png" style="width: 100%; height: 80%"
